--- a/app/public/survery.html
+++ b/app/public/survery.html
@@ -14,7 +14,17 @@
             </li>
         </ul>
         <div class="container">
-            <p>Question 1</p>
+        <p class="question">Question 1</p>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary">1</button>
+                    <button type="button" class="btn btn-secondary">2</button>
+                    <button type="button" class="btn btn-secondary">3</button>
+                    <button type="button" class="btn btn-secondary">4</button>
+                    <button type="button" class="btn btn-secondary">5</button>
+                </div>
+            </div>
+            <p class="question">Question 2</p>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
                     <button type="button" class="btn btn-secondary">1</button>
