added basic info to data file

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -13,7 +13,7 @@
                 <hr class="my-4">
                     <p>Instuctions and explanations will go here.</p>
                     <p class="lead">
-                      <a class="btn btn-info btn-lg" href="#" role="button">Start Survey</a>
+                      <a class="btn btn-info btn-lg" href="survey.html" role="button">Start Survey</a>
                     </p>
         </div>
     </body>
