--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -17,21 +17,21 @@
         <p class="question">Question 1</p>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
-                    <button type="button" class="btn btn-secondary">1</button>
-                    <button type="button" class="btn btn-secondary">2</button>
-                    <button type="button" class="btn btn-secondary">3</button>
-                    <button type="button" class="btn btn-secondary">4</button>
-                    <button type="button" class="btn btn-secondary">5</button>
+                    <button type="button" class="btn btn-secondary" value="1">1</button>
+                    <button type="button" class="btn btn-secondary" value="2">2</button>
+                    <button type="button" class="btn btn-secondary" value="3">3</button>
+                    <button type="button" class="btn btn-secondary" value="4">4</button>
+                    <button type="button" class="btn btn-secondary" value="5">5</button>
                 </div>
             </div>
             <p class="question">Question 2</p>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
-                    <button type="button" class="btn btn-secondary">1</button>
-                    <button type="button" class="btn btn-secondary">2</button>
-                    <button type="button" class="btn btn-secondary">3</button>
-                    <button type="button" class="btn btn-secondary">4</button>
-                    <button type="button" class="btn btn-secondary">5</button>
+                    <button type="button" class="btn btn-secondary" value="1">1</button>
+                    <button type="button" class="btn btn-secondary" value="2">2</button>
+                    <button type="button" class="btn btn-secondary" value="3">3</button>
+                    <button type="button" class="btn btn-secondary" value="4">4</button>
+                    <button type="button" class="btn btn-secondary" value="5">5</button>
                 </div>
             </div>
     </div>
