--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -17,23 +17,29 @@
         <p class="question">Question 1</p>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
-                    <button type="button" class="btn btn-secondary" value="1">1</button>
-                    <button type="button" class="btn btn-secondary" value="2">2</button>
-                    <button type="button" class="btn btn-secondary" value="3">3</button>
-                    <button type="button" class="btn btn-secondary" value="4">4</button>
-                    <button type="button" class="btn btn-secondary" value="5">5</button>
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
                 </div>
             </div>
             <p class="question">Question 2</p>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
-                    <button type="button" class="btn btn-secondary" value="1">1</button>
-                    <button type="button" class="btn btn-secondary" value="2">2</button>
-                    <button type="button" class="btn btn-secondary" value="3">3</button>
-                    <button type="button" class="btn btn-secondary" value="4">4</button>
-                    <button type="button" class="btn btn-secondary" value="5">5</button>
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
                 </div>
             </div>
     </div>
+    <script type="text/javascript">
+        $(".number").on("click", function(){
+            var number = $(this).val();
+            console.log('cliked!', number);
+        })
+    </script>
     </body>
 </html>
