linked server to frontend

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -16,5 +16,10 @@
                       <a class="btn btn-info btn-lg" href="/survey" role="button">Start Survey</a>
                     </p>
         </div>
+        <footer class="footer">
+            <div class="container">
+                <p><a href="/api/friends">API Table Link</a> | <a href="https://github.com/ciarram/finder-game">GitHub Repo</a></p>
+            </div>
+        </footer>
     </body>
 </html>
