added rest of the test questions and explanation on the home page

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,14 +4,14 @@
         <meta charset = "UTF-8">
         <title>Home</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-        <link type="text/css" href="./app/public/style.css">
+        <link type="text/css" href="app/public/style.css">
         <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="jumbotron">
             <h1 class="display-3">Title</h1>
                 <hr class="my-4">
-                    <p>Instuctions and explanations will go here.</p>
+                    <p>On a scale from one to five, with one being strongly disagree to five begin strongly agree, answer each question to see who you match up with.</p>
                     <p class="lead">
                       <a class="btn btn-info btn-lg" href="/survey" role="button">Start Survey</a>
                     </p>
