--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8">
         <title>Survey</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="app/public/style.css">
         <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -25,6 +25,86 @@
                 </div>
             </div>
             <p class="question">Question 2</p>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
+                </div>
+            </div>
+            <p class="question">Question 3</p>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
+                </div>
+            </div>
+            <p class="question">Question 4</p>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
+                </div>
+            </div>
+            <p class="question">Question 5</p>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
+                </div>
+            </div>
+            <p class="question">Question 6</p>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
+                </div>
+            </div>
+            <p class="question">Question 7</p>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
+                </div>
+            </div>
+            <p class="question">Question 8</p>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
+                </div>
+            </div>
+            <p class="question">Question 9</p>
+            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary number" value="1">1</button>
+                    <button type="button" class="btn btn-secondary number" value="2">2</button>
+                    <button type="button" class="btn btn-secondary number" value="3">3</button>
+                    <button type="button" class="btn btn-secondary number" value="4">4</button>
+                    <button type="button" class="btn btn-secondary number" value="5">5</button>
+                </div>
+            </div>
+            <p class="question">Question 10</p>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
                     <button type="button" class="btn btn-secondary number" value="1">1</button>
